# tgov-scraper

./: .gitignore  README.md  SPEC.md  pyproject.toml
.cursor/rules/: pattern.mdc  workflow.mdc
.github/workflows/: run-tests.yml
data/: meetings.csv
data/transcripts/: test_granicus_video.json  test_granicus_video.txt
notebooks/: meetings.ipynb  roll_call.ipynb  transcript.ipynb  videos.ipynb
notebooks/.ipynb_checkpoints/: meetings-checkpoint.ipynb
scripts/: download_fixture.py  download_fixtures.py  download_m3u8.py  video2text.py
src/: audio.py  granicus.py  huggingface.py  main.py  meetings.py  videos.py
src/api/: __init__.py
src/api/routes/: meetings.py  topics.py  transcriptions.py  users.py
src/db/: session.py
src/models/: meeting.py  topic.py  transcription.py  user.py
src/services/: meeting_service.py  scraper_service.py  topic_service.py  transcription_service.py  user_service.py
tests/: __init__.py  test_granicus.py  test_meetings.py  test_video_extraction.py  test_videos.py
tests/fixtures/: video_player.html
