[tool.poetry]
name = "tgov scraper"
version = "0.1.0"
description = "A set of scripts and notebooks for exploring Tulsa Government Access Television"
authors = ["jdungan <johnadungan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selectolax = "^0.3.28"
aiohttp = "^3.11.13"
pytest-asyncio = "^0.25.3"
pydantic = "^2.10.6"
matplotlib = "^3.10.1"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
ipywidgets = "^8.1.5"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
