[tool.poetry]
name = "tgov scraper"
version = "0.1.0"
description = "A set of scripts and notebooks for exploring Tulsa Government Access Television"
authors = ["jdungan <johnadungan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selectolax = "^0.3.28"
aiohttp = "^3.11.13"
pytest-asyncio = "^0.25.3"
pydantic = "^2.10.6"
matplotlib = "^3.10.1"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
ipywidgets = "^8.1.5"
tqdm = "^4.67.1"
m3u8 = "^6.0.0"
requests = "^2.32.3"
pydub = "^0.25.1"
moviepy = "^2.1.2"
jupyter = "^1.1.1"
jupyter-nbextensions-configurator = "^0.6.4"
faster-whisper = "1.1.0"
whisperx = {git = "https://github.com/m-bain/whisperx.git", python = ">=3.10,<3.13"}
python-dotenv = "^1.0.1"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
